[package]
name = "rpower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-complex = "0.4.0"
densetools = { path = "../densetools" }
sparsetools = { path = "../sparsetools", features = ["densetools"] }
