[package]
name = "powers"
version = "0.1.0"
description = "Power flow simulation and optimization"
license = "BSD-3-Clause"
repository = "https://github.com/powe-rs/powers"
edition = "2021"

[dependencies]
num-complex = "0.4.0"
caseformat = "0.1"
sparsetools = "0.2.3"
full = "0.3"
spsolve = { version = "0.1", features = ["rlu"] }
anyhow = "1"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
num-traits = "0.2"
derive_builder = "0.12"
pretty_dtoa = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
tsify = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_log = "1"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
